[metadata]
name = pysbgn
version = 0.2.1
author = Vid PodpeÄan
author_email = vid.podpecan@ijs.si
description = Support for SBGN ML v0.3 via generateDS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vpodpecan/pysbgn
project_urls =
    Bug Tracker = https://github.com/vpodpecan/pysbgn/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src
